# pylast

./: .codecov.yml  .coveragerc  .dir-locals.el  .editorconfig  .gitignore  .mergify.yml  .pre-commit-config.yaml  .scrutinizer.yml  .travis.yml  AUTHORS  CHANGELOG.md  COPYING  INSTALL  MANIFEST  MANIFEST.in  PKG-INFO  README  README.md  RELEASING.md  changes.txt  check.sh  clonedigger.sh  example_test_pylast.yaml  pylast.html  pylast.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_pylast.py  test_pylast_example.yaml  test_requirements.txt  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  labels.yml  release-drafter.yml  renovate.json
.github/workflows/: deploy.yml  labels.yml  lint.yml  release-drafter.yml  test.yml
pylast/: __init__.py  version.py
src/pylast/: __init__.py  exceptions.py  utils.py  version.py
tests/: conftest.py  request_test.py  test_album.py  test_album_artist.py  test_artist.py  test_authenticated_user.py  test_country.py  test_equality.py  test_library.py  test_librefm.py  test_network.py  test_pylast.py  test_pylast_album.py  test_pylast_artist.py  test_pylast_country.py  test_pylast_library.py  test_pylast_librefm.py  test_pylast_network.py  test_pylast_tag.py  test_pylast_track.py  test_pylast_user.py  test_request.py  test_tag.py  test_track.py  test_user.py  unicode_test.py
tests/cassettes/test_album/: TestPyLastAlbum.test_album_in_recent_tracks.yaml  TestPyLastAlbum.test_album_tags_are_topitems.yaml  TestPyLastAlbum.test_album_wiki_published_date.yaml  TestPyLastAlbum.test_get_cover_image.yaml  TestPyLastAlbum.test_mbid.yaml
tests/cassettes/test_artist/: TestPyLastArtist.test_artist_get_correction.yaml  TestPyLastArtist.test_artist_is_hashable.yaml  TestPyLastArtist.test_artist_listener_count.yaml  TestPyLastArtist.test_artist_top_albums.yaml  TestPyLastArtist.test_artist_top_albums_limit[100].yaml  TestPyLastArtist.test_artist_top_albums_limit[1].yaml  TestPyLastArtist.test_artist_top_albums_limit[50].yaml  TestPyLastArtist.test_artist_top_albums_limit_default.yaml  TestPyLastArtist.test_artist_top_tracks.yaml  TestPyLastArtist.test_artists.yaml  TestPyLastArtist.test_bio_content.yaml  TestPyLastArtist.test_bio_content_none.yaml  TestPyLastArtist.test_bio_published_date.yaml  TestPyLastArtist.test_bio_summary.yaml  TestPyLastArtist.test_get_userplaycount.yaml
tests/cassettes/test_country/: TestPyLastCountry.test_country_top_artists_have_correct_network.yaml
tests/cassettes/test_library/: TestPyLastLibrary.test_cacheable_library.yaml
tests/cassettes/test_network/: TestPyLastNetwork.test_album_data.yaml  TestPyLastNetwork.test_album_mbid.yaml  TestPyLastNetwork.test_album_search.yaml  TestPyLastNetwork.test_album_search_images.yaml  TestPyLastNetwork.test_artist_mbid.yaml  TestPyLastNetwork.test_artist_search.yaml  TestPyLastNetwork.test_caching.yaml  TestPyLastNetwork.test_country_network_top_tracks.yaml  TestPyLastNetwork.test_country_top_artists.yaml  TestPyLastNetwork.test_country_top_tracks.yaml  TestPyLastNetwork.test_disable_rate_limiting.yaml  TestPyLastNetwork.test_enable_rate_limiting.yaml  TestPyLastNetwork.test_geo_get_top_artists.yaml  TestPyLastNetwork.test_geo_get_top_tracks.yaml  TestPyLastNetwork.test_init_with_token.yaml  TestPyLastNetwork.test_network_get_top_artists_with_limit.yaml  TestPyLastNetwork.test_network_get_top_tags_with_limit.yaml  TestPyLastNetwork.test_network_get_top_tags_with_no_limit.yaml  TestPyLastNetwork.test_network_get_top_tracks_with_limit.yaml  TestPyLastNetwork.test_search_get_total_result_count.yaml  TestPyLastNetwork.test_tag_top_tracks.yaml  TestPyLastNetwork.test_track_data.yaml  TestPyLastNetwork.test_track_mbid.yaml  TestPyLastNetwork.test_track_search.yaml  TestPyLastNetwork.test_track_search_images.yaml
tests/cassettes/test_tag/: TestPyLastTag.test_tag_is_hashable.yaml  TestPyLastTag.test_tag_top_albums.yaml  TestPyLastTag.test_tag_top_artists.yaml  TestPyLastTag.test_tags.yaml
tests/cassettes/test_track/: TestPyLastTrack.test_album_tracks.yaml  TestPyLastTrack.test_track_get_album.yaml  TestPyLastTrack.test_track_get_correction.yaml  TestPyLastTrack.test_track_get_duration.yaml  TestPyLastTrack.test_track_get_similar.yaml  TestPyLastTrack.test_track_get_similar_limits.yaml  TestPyLastTrack.test_track_is_hashable.yaml  TestPyLastTrack.test_track_title_prop_caps.yaml  TestPyLastTrack.test_track_wiki_content.yaml  TestPyLastTrack.test_track_with_no_mbid.yaml  TestPyLastTrack.test_user_loved_in_track_info.yaml
tests/cassettes/test_user/: TestPyLastUser.test_cacheable_user.yaml  TestPyLastUser.test_cacheable_user_get_track_scrobbles.yaml  TestPyLastUser.test_get_countryless_user.yaml  TestPyLastUser.test_get_image.yaml  TestPyLastUser.test_get_name.yaml  TestPyLastUser.test_get_playcount.yaml  TestPyLastUser.test_get_recent_tracks_from_to.yaml  TestPyLastUser.test_get_recent_tracks_limit_none.yaml  TestPyLastUser.test_get_weekly_artist_charts.yaml  TestPyLastUser.test_get_weekly_track_charts.yaml  TestPyLastUser.test_love_limits.yaml  TestPyLastUser.test_now_playing_user_with_no_scrobbles.yaml  TestPyLastUser.test_user_charts.yaml  TestPyLastUser.test_user_get_country.yaml  TestPyLastUser.test_user_get_image.yaml  TestPyLastUser.test_user_get_top_tags_with_limit.yaml  TestPyLastUser.test_user_get_track_scrobbles.yaml  TestPyLastUser.test_user_subscriber.yaml  TestPyLastUser.test_user_tagged_albums.yaml  TestPyLastUser.test_user_tagged_artists.yaml  TestPyLastUser.test_user_tagged_tracks.yaml  TestPyLastUser.test_user_top_albums.yaml  TestPyLastUser.test_user_top_artists.yaml  TestPyLastUser.test_user_top_tracks.yaml
