[metadata]
name = pylast
description = A Python interface to Last.fm and Libre.fm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pylast/pylast
author = Amr Hassan <amr.hassan@gmail.com> and Contributors
author_email = amr.hassan@gmail.com
license = Apache-2.0
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet
    Topic :: Multimedia :: Sound/Audio
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Last.fm
    music
    scrobble
    scrobbling

[options]
packages = find:
python_requires = >=3.6
package_dir = =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.extras_require]
tests =
    flaky
    pytest
    pytest-cov
    pytest-random-order
    pyyaml

[flake8]
max_line_length = 88

[tool:isort]
profile = black
